bazar-store/kubernetes/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarstore-ingress
  namespace: bazarstore-dev
  labels:
    environment: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.bazarstore.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: core
            port:
              number: 80
      - path: /api/catalog
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 5000
      - path: /api/order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 5001
